code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_20.wast
(assert_invalid
  (module (func $type-empty-f64 (result f64) (if (i32.const 0) (then) (else))))
  "type mismatch"
)